# learning-rust

./: .gitignore  CHEATSHEET.md  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: course.yml
capstones/: MIGRATION.md  README.md
capstones/comparative/: README.md
capstones/comparative/solution/: Cargo.toml
capstones/comparative/solution/src/: application.rs  cli.rs  domain.rs  error.rs  lib.rs  main.rs  store.rs
capstones/comparative/solution/tests/: conformance.rs  smoke.rs
capstones/comparative/starter/: Cargo.toml
capstones/comparative/starter/src/: application.rs  cli.rs  domain.rs  error.rs  lib.rs  main.rs  store.rs
capstones/comparative/starter/tests/: milestones.rs  smoke.rs
capstones/comparative/tests/contracts/: conformance.rs  smoke.rs
capstones/idiomatic/: README.md  SPEC.md
capstones/idiomatic/solution/: Cargo.toml
capstones/idiomatic/solution/src/: build.rs  cli.rs  domain.rs  error.rs  lib.rs  main.rs  query.rs  storage.rs  tokenization.rs  tree.rs
capstones/idiomatic/solution/tests/: milestones.rs  smoke.rs
capstones/idiomatic/starter/: Cargo.toml
capstones/idiomatic/starter/src/: build.rs  cli.rs  domain.rs  error.rs  lib.rs  main.rs  query.rs  storage.rs  tokenization.rs  tree.rs
capstones/idiomatic/starter/tests/: milestones.rs  smoke.rs
capstones/idiomatic/tests/contracts/: milestones.rs  smoke.rs
capstones/idiomatic/tests/fixtures/: expected_index.json  expected_search.json  expected_stats.json  (+1 more)
course_support/: lib.rs
docs/: BEGINNER_GUIDE.md  OWNERSHIP_AND_BORROWING.md  README.md  SETUP.md
exercises/: README.md
exercises/01_basics/: README.md  exercises.rs  solutions.rs
exercises/02_control_flow/: README.md  exercises.rs  solutions.rs
exercises/03_ownership_and_borrowing/: README.md  exercises.rs  solutions.rs
exercises/04_structs_enums_and_patterns/: README.md  exercises.rs  solutions.rs
exercises/05_collections_iterators_and_closures/: README.md  exercises.rs  solutions.rs
exercises/06_errors_modules_and_io/: README.md  exercises.rs  solutions.rs
exercises/07_generics_traits_and_lifetimes/: README.md  exercises.rs  solutions.rs
exercises/08_testing/: README.md  exercises.rs  solutions.rs
exercises/09_tooling_and_debugging/: README.md  exercises.rs  solutions.rs
exercises/10_application_integration/: README.md  exercises.rs  solutions.rs
exercises/10_sql_and_sqlite/: README.md  exercises.rs  solutions.rs
exercises/11_concurrency/: README.md  exercises.rs  solutions.rs
exercises/12_async_rust/: README.md  exercises.rs  solutions.rs
exercises/13_rest_apis_and_http_clients/: README.md  exercises.rs  solutions.rs
lessons/: README.md
lessons/01_basics/: 01_hello_world.rs  02_variables_and_types.rs  03_strings_and_functions.rs  README.md
lessons/02_control_flow/: 01_conditionals_and_match.rs  02_loops_and_ranges.rs  README.md
lessons/03_ownership_and_borrowing/: 01_moves_copy_and_clone.rs  02_references_and_slices.rs  README.md
lessons/04_structs_enums_and_patterns/: 01_structs_and_methods.rs  02_enums_option_and_patterns.rs  README.md
lessons/05_collections_iterators_and_closures/: 01_collections.rs  02_iterators_and_closures.rs  README.md
lessons/06_errors_modules_and_io/: 01_result_and_custom_errors.rs  02_modules_files_and_paths.rs  README.md
lessons/07_generics_traits_and_lifetimes/: 01_generics_and_traits.rs  02_lifetimes_and_trait_objects.rs  README.md
lessons/08_testing/: 01_unit_tests.rs  02_test_design.rs  README.md
lessons/09_tooling_and_debugging/: 01_cargo_workflow.rs  02_diagnostics_and_cli.rs  README.md
lessons/10_application_integration/: 01_serde_json.rs  02_tcp_and_http.rs  README.md
lessons/10_sql_and_sqlite/: 01_schema_constraints_and_parameters.rs  02_crud_queries_and_indexes.rs  03_transactions_and_repositories.rs  README.md
lessons/11_concurrency/: 01_threads_and_channels.rs  02_shared_state.rs  README.md
lessons/12_async_rust/: 01_async_await.rs  02_concurrent_tasks.rs  README.md
lessons/13_rest_apis_and_http_clients/: 01_serde_wire_and_domain.rs  02_axum_routes_state_and_errors.rs  03_reqwest_clients.rs  04_actix_web_comparison.rs  README.md
project/: README.md
project/task_manager/: Cargo.toml  README.md
project/task_manager/src/: cli.rs  domain.rs  lib.rs  main.rs  storage.rs
project/task_manager/tests/: task_manager.rs
projects/: README.md
projects/tasks/: README.md
projects/tasks/contracts/: Cargo.toml
projects/tasks/contracts/src/: lib.rs
projects/tasks/contracts/tests/: milestones.rs
projects/tasks/docs/: SPEC.md  openapi.yaml
projects/tasks/solution/: Cargo.toml
projects/tasks/solution/src/: application.rs  cli.rs  client.rs  domain.rs  error.rs  lib.rs  server.rs
projects/tasks/solution/src/api/: actix.rs  axum.rs  boundary.rs
projects/tasks/solution/src/client/: cli.rs  error.rs  http.rs  mod.rs
projects/tasks/solution/src/core/: application.rs  domain.rs  error.rs  mod.rs
projects/tasks/solution/src/protocol/: mod.rs
projects/tasks/solution/src/server/: error.rs  mod.rs
projects/tasks/solution/src/server/api/: actix.rs  axum.rs  boundary.rs  mod.rs
projects/tasks/solution/src/server/storage/: markdown.rs  sqlite.rs
projects/tasks/solution/src/storage/: markdown.rs  mod.rs  sqlite.rs
projects/tasks/solution/tests/: http_contracts.rs  milestones.rs  openapi.rs  smoke.rs
projects/tasks/starter/: Cargo.toml
projects/tasks/starter/src/: application.rs  cli.rs  client.rs  domain.rs  error.rs  lib.rs  server.rs
projects/tasks/starter/src/api/: actix.rs  axum.rs  boundary.rs  mod.rs
projects/tasks/starter/src/client/: cli.rs  error.rs  http.rs  mod.rs
projects/tasks/starter/src/core/: application.rs  domain.rs  error.rs
projects/tasks/starter/src/protocol/: mod.rs
projects/tasks/starter/src/server/: error.rs  mod.rs
projects/tasks/starter/src/server/api/: actix.rs  axum.rs  boundary.rs  mod.rs
projects/tasks/starter/src/storage/: markdown.rs  mod.rs  sqlite.rs
projects/tasks/starter/tests/: milestones.rs  smoke.rs
scripts/: check-markdown-links.py  run-course.sh
(+19 files in other folders)
