[package]
name = "comparative-kv-solution"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
clap.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
tempfile.workspace = true

[lints]
workspace = true
