[package]
name = "comparative-kv-starter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rusqlite.workspace = true
serde.workspace = true
tempfile.workspace = true

[lints]
workspace = true
