[package]
name = "tasks-starter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
actix-web.workspace = true
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[[bin]]
name = "tasks-api-starter"
path = "src/bin/tasks-api.rs"
doc = false

[[bin]]
name = "tasks-starter"
path = "src/bin/tasks.rs"
doc = false
